--- a/app/src/main/res/layout/activity_acceuil.xml
+++ b/app/src/main/res/layout/activity_acceuil.xml
@@ -27,15 +27,18 @@
                 android:textSize="50dp" />
 
             <RadioGroup
+                android:id="@+id/modeGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:orientation="horizontal"
                 android:paddingLeft="40dp"
-                android:paddingRight="20dp">
+                android:paddingRight="20dp"
+                android:checkedButton="@id/vsUser"
+                >
 
                 <RadioButton
-                    android:id="@+id/radioButton"
+                    android:id="@+id/vsUser"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
@@ -47,7 +50,7 @@
                     android:layout_weight="1" />
 
                 <RadioButton
-                    android:id="@+id/radioButton2"
+                    android:id="@+id/vsIa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="50dp"
